# Projetos-em-linguagem-C-da-Faculdade

ArvoreB/BuscaNaArvoreB/: BuscaNaArvoreB.cbp  BuscaNaArvoreB.layout  main.c
Autômatos Celulares/AutomatoCelular1D/: AutomatoCelular1D.cbp  AutomatoCelular1D.depend  main.c
CadastroDeAlunos/: CadastroDeAlunos.cbp  CadastroDeAlunos.depend  CadastroDeAlunos.layout  main.c  teste.txt
HASH/Tabela/: Tabela.cbp  Tabela.depend  Tabela.layout  Tabela.workspace  main.c
HASH/hashlib/: hashlib.c  hashlib.cbp  hashlib.h  hashlib.layout  main.c
Tank/tankwar_r8/tankwar_r8/: Makefile  Makefile.am  Makefile.in  bullet.c  input.c  main.c  setup.c  tank.c  tankwar.h
Tank/tankwar_r8/tankwar_r8/docs/: Makefile  Makefile.in
Tank/tankwar_r8/tankwar_r8/docs/en/: Makefile  Makefile.in
bd/: Clientes.bd  bd.c  bd.cbp  bd.depend  bd.h  bd.layout  main.c
