####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = tankwar_r8

## INCLUDES were found outside kdevelop specific part

tankwar_r8_SOURCES = tank.c setup.c mappyal.c main.c input.c bullet.c 
tankwar_r8_LDADD   = -L/usr/local/lib -L/usr/X11R6/lib -lalleg -lXxf86dga -lXxf86vm  -lkdeui -lX11


EXTRA_DIST = bullet.c input.c main.c map.h mappyal.c mappyal.h setup.c tank.c tankwar.h 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
tankwar_r8_LDFLAGS = $(all_libraries) 
                                                                                
